[css-flexbox] Cache whether our main axis size is definite

This is an important performance optimization on pages
that have a lot of percentage-sized descendants of flexboxes.

TEST=n/a, no change in behavior
BUG=617792

Review-Url: https://codereview.chromium.org/2056043002
Cr-Commit-Position: refs/heads/master@{#404969}

Former-commit-id: 7f6ee2762d0e5617c17ad828d6353424ca59bacd